--- a/exam_problems.ipynb
+++ b/exam_problems.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "923b7f6e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56ce548e",
    "metadata": {},
    "outputs": [],
@@ -82,11 +82,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0465b06e",
+   "cell_type": "markdown",
+   "id": "42ea4c74",
    "metadata": {},
    "source": [
     "12. Explain and demonstrate with an example the different probing methods of handling hash table collision.\n",
+    "\n",
     "\n",
     "simple hash tables size 5\n",
     "indices 0 1 2 3 4\n",
@@ -144,8 +145,7 @@
     "2  → h2 = 3\n",
     "7  → h2 = 2\n",
     "12 → h2 = 1\n",
-    "17 → h2 = 3\n",
-    "\n"
+    "17 → h2 = 3"
    ]
   },
   {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "da3f326f",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dd2ea6be",
    "metadata": {},
    "outputs": [],
@@ -243,8 +243,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
